log/build_2021-05-31_17-57-01/gazebo_plugin_sim/stdout_stderr.log
[35m[1mScanning dependencies of target platform_plugin_test[0m
[ 50%] [32mBuilding CXX object CMakeFiles/platform_plugin_test.dir/src/platform_plugin_test.cpp.o[0m
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp: In member function ‘virtual void gazebo_plugin_sim::PlatformPluginTest::Load(gazebo::physics::ModelPtr, sdf::v9::ElementPtr)’:
/home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:167:68: error: use of deleted function ‘std::unique_ptr<_Tp, _Dp>::unique_ptr(const std::unique_ptr<_Tp, _Dp>&) [with _Tp = gazebo_plugin_sim::PlatformPluginTestPrivate; _Dp = std::default_delete<gazebo_plugin_sim::PlatformPluginTestPrivate>]’
  167 |         boost::bind(&PlatformPluginTestPrivate::OnUpdate, impl_, _1));
      |                                                                    ^
In file included from /usr/include/c++/9/memory:80,
                 from /usr/include/gazebo-11/gazebo/common/CommonTypes.hh:23,
                 from /usr/include/gazebo-11/gazebo/common/Time.hh:26,
                 from /home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:4:
/usr/include/c++/9/bits/unique_ptr.h:414:7: note: declared here
  414 |       unique_ptr(const unique_ptr&) = delete;
      |       ^~~~~~~~~~
In file included from /usr/include/boost/bind/bind.hpp:2187,
                 from /usr/include/boost/bind.hpp:22,
                 from /usr/include/boost/thread/detail/thread.hpp:33,
                 from /usr/include/boost/thread/thread_only.hpp:22,
                 from /usr/include/boost/thread/thread.hpp:12,
                 from /usr/include/boost/thread.hpp:13,
                 from /usr/include/gazebo-11/gazebo/common/Console.hh:27,
                 from /usr/include/gazebo-11/gazebo/common/Events.hh:23,
                 from /usr/include/gazebo-11/gazebo/physics/Joint.hh:28,
                 from /home/javierfr/Tesis_ws/V1/src/gazebo_plugin_sim/src/platform_plugin_test.cpp:5:
/usr/include/boost/bind/bind_mf_cc.hpp:65:75: note:   initializing argument 2 of ‘boost::_bi::bind_t<R, boost::_mfi::mf1<R, T, A1>, typename boost::_bi::list_av_2<A1, A2>::type> boost::bind(R (T::*)(B1), A1, A2) [with R = void; T = gazebo_plugin_sim::PlatformPluginTestPrivate; B1 = const gazebo::common::UpdateInfo&; A1 = std::unique_ptr<gazebo_plugin_sim::PlatformPluginTestPrivate>; A2 = boost::arg<1>; typename boost::_bi::list_av_2<A1, A2>::type = boost::_bi::list2<boost::_bi::value<std::unique_ptr<gazebo_plugin_sim::PlatformPluginTestPrivate> >, boost::arg<1> >]’
   65 |     BOOST_BIND(R (BOOST_BIND_MF_CC T::*f) (B1) BOOST_BIND_MF_NOEXCEPT, A1 a1, A2 a2)
      |                                                                        ~~~^~
At global scope:
cc1plus: warning: unrecognized command line option ‘-Wno-inconsistent-missing-override’
make[2]: *** [CMakeFiles/platform_plugin_test.dir/build.make:63: CMakeFiles/platform_plugin_test.dir/src/platform_plugin_test.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/platform_plugin_test.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
